@@ -5,6 +5,7 @@
 - OrmFile: maintain insertion order
 - do not show _commands to user (use an @Alias to expose command
   with a different name)
+- expand support for choices to MULTI and MULTIREQ
 
 
 0.84.01
